# lib_and_derive_template

./: Cargo.toml  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
main/: Cargo.toml
main/src/: lib.rs
main/tests/: lib.rs
