[package]
#Name of this crate
name = "derive"
version = "0.1.0"
#Authors of this create
authors = ["Jorge Rico Vivas <jorgericoinformatic@gmail.com>"]
#Short description for your crate, like "This crate allows you to associate values to each variant on an enum"
description = ""
#Indiate your repository URL
repository = "https://github.com/JorgeRicoVivas/my_crate_s_name"
#Write at most 5 features, like ["useful", "crate"]
keywords = []
#Write at most 5 categoires, like ["no-std", "no-std::no-alloc", "rust-patterns"]
categories = []
license-file = "../LICENSE.txt"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["extra-traits"] }
proc-macro2 = { version = "1.0.78", features = [] }
quote = { version = "1.0.35", features = [] }
