[package]
name = "main"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
derive = { version = "1.0.0", path = "../derive", optional = true }

[dev-dependencies]
derive = { version = "1.0.0", path = "../derive" }

[profile.dev]
incremental = true
panic = "abort"
debug = 2
opt-level = 0
lto = "off"
codegen-units = 256

[profile.release]
incremental = false
panic = "abort"
debug = false
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"